syntax = "proto3";

package com.github.kornilova_l.flamegraph.proto;

option java_outer_classname = "EventProtos";

message Event {
    oneof type {
        MethodEvent methodEvent = 1;
        Map newClass = 2;
        Map newThread = 3;
    }

    message MethodEvent {
        int64 thread_id = 1;
        int64 time = 2;
        oneof info {
            Enter enter = 3;
            Exit exit = 4;
            Exception exception = 5;
        }

        message Enter {
            int64 class_name_id = 1;
            string method_name = 2;
            bool is_static = 3;
            repeated Var parameters = 4;
            string description = 5;
        }

        message Exit {
            Var return_value = 1;
        }

        message Exception {
            Var.Object object = 1;
        }
    }

    message Map {
        int64 id = 1;
        string name = 2;
    }
}

message Var {
    oneof value {
        sint32 I = 1; // int
        sint64 J = 2; // long
        bool Z = 3; // boolean
        uint32 C = 4; // char
        sint32 S = 5; // short
        sint32 B = 6; // byte
        float F = 7; // float
        double D = 8; // double
        Object object = 9; // object
    }

    message Object {
        string type = 1;
        string value = 2;
    }
}
