syntax = "proto3";

package com.github.kornilova_l.flamegraph.proto;

option java_outer_classname = "TreeProtos";

import "com/github/kornilova_l/flamegraph/proto/event.proto";

message Tree {
    TreeInfo tree_info = 1;
    Node base_node = 2;
    uint32 depth = 3;
    uint32 visible_depth = 4; // is null if tree was not cut
    int64 width = 5;

    message Node {
        int64 offset = 1; // how much time passed since start of tree
        int64 width = 2; // how much time did node take
        NodeInfo node_info = 3;
        repeated Node nodes = 4;

        message NodeInfo {
            string method_name = 1;
            string class_name = 2;
            string description = 3;
            repeated com.github.kornilova_l.flamegraph.proto.Parameter parameters = 4;
            oneof result { // only for ser_trees which save original call structure
                           com.github.kornilova_l.flamegraph.proto.Var return_value = 5;
                           com.github.kornilova_l.flamegraph.proto.Var.Object exception = 6;
            }
        }
    }

    message TreeInfo {
        int64 start_time = 1;
        string thread_name = 2;
        float time_percent = 3; // for method trees
        int32 nodes_count = 4;
    }
}